# FOM_app

./: .buildinfo  README.md  genindex.html  index.html  lisa_gb.html  lisa_noise.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  usage.html  utils.html
.github/workflows/: documentation.yml
_sources/: lisa_gb.rst.txt  lisa_noise.rst.txt  usage.rst.txt  utils.rst.txt
appFOM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.html  requirements.txt
docs/source/: conf.py  index.rst  lisa_gb.rst  lisa_noise.rst  usage.rst  utils.rst
notebooks/: testNotebookDash.ipynb
src/appFOM/: LISA_GB_configuration.py  LISA_noise_configuration.py  utils.py
src/appFOM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
